--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body class="outfit">
   <div class="qr_container">
     <div class="img_container">
-      <img src="./images/image-qr-code.png" alt="">
+      <img src="./images/image-qr-code.png" alt="qr code to https://www.frontendmentor.io/">
     </div>
     <div class="text_container">
       <h1>
